Fix first tab not centred.

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@
 .fnweeklynavnorm a:active {
     text-decoration: none;
 }
+.fnweeklynavnorm .tooltip {
+    text-align: inherit;
+}
+
 td.fnweeklynavselected {
     color: black;
     font-weight: bold;
